--- a/css/style.css
+++ b/css/style.css
@@ -30,40 +30,6 @@ body {
     background-color: black;
 
 }
-/* NAVBAR SIGN UP */
-.navbar2 .navbar2-sg{
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.navbar2 .navbar2-sg .navbar-a-sg{
-    color: #C7E7F1;
-    text-decoration: none;
-    padding: 0.70em;
-    margin-right: 2em;
-    font-size: 1.8em;
-    font-weight: bold;
-}
-
-/* NAVBAR LOGIN */
-.navbar2 .navbar2-lg{
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.navbar2 .navbar2-lg .navbar-a-lg{
-    color: #C7E7F1;
-    text-decoration: none;
-    padding: 0.70em;
-    margin-right: 2em;
-    font-size: 1.8em;
-    font-weight: bold;
-}
-
 /* NAVBAR HOME */
 .navbar2 .navbar2-container{
     list-style-type: none;
@@ -81,25 +47,49 @@ body {
     font-weight: bold;
 }
 
+/* FIN DE NAVBAR */
 
-/* NAVBAR FAQ */
-/*
-.navbar2 .navbar2-faq{
-    list-style-type: none;
+/* SLIDER */
+.slider{
+    width: 100%;
+    overflow: hidden;
+    margin: auto;
+}
+.slider ul{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0;
+    width: 400%;
+
+    animation: cambio 20s infinite alternate;
+    animation-timing-function: ease-in;
 }
 
-.navbar2 .navbar2-faq .navbar-a-faq{
-    color: #C7E7F1;
-    text-decoration: none;
-    padding: 0.70em;
-    margin-right: 2em;
-    font-size: 1.8em;
-    font-weight: bold;
-}*/
-/* FIN NAVBAR */
+.slider li{
+    width: 100%;
+    list-style: none;   
+}
+
+.slider img{
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes cambio{
+    0% { margin-left: 0; }
+    20% { margin-left: 0; }
+
+    25% { margin-left: -100%; }
+    45% { margin-left: -100%; }
+
+    50% { margin-left: -200%; }
+    70% { margin-left: -200%; }
+
+    75% { margin-left: -300%; }
+    100% { margin-left: -300%; }
+}
+
+
+
 
 
 
