--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,12 @@ body {
 .navbar2{
     margin-top: 0%;
     background-color: black;
-
 }
 /* NAVBAR HOME */
 .navbar2 .navbar2-container{
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -49,7 +48,7 @@ body {
 
 /* FIN DE NAVBAR */
 
-/* SLIDER */
+/* SLIDER HOME*/
 .slider{
     width: 100%;
     overflow: hidden;
@@ -88,7 +87,7 @@ body {
     100% { margin-left: -300%; }
 }
 
-
+/* BOTON DESPLEGABLE */
 
 
 
@@ -246,60 +245,11 @@ input::placeholder {
     color: #C7E7F1;
 }
 
-/*  FAQ MAIN*/
-
-.body-faq{
-    background: url(../img/torre.jpeg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
 /* HOME */
-
-.foto-carrusell{
-    width: 100%;
-}
 
 .innerImage{
     width: 300px;
 }
-
-.logos-cards{
-    display: flex;
-    justify-content: space-around;
-}
-
-.dc-logo{
-    width: 20%;
-}
-
-.m-logo{
-    width: 20%;
-}
-
-.container-cards{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
-}
-.cards-dc{
-    display: flex;
-    flex-direction: column;
-}
-
-.cards-marvel{
-    display: flex;
-    flex-direction: column;
-}
-
-
-
-
-
-
-
 
 
 /* FOOTER*/
@@ -316,11 +266,6 @@ input::placeholder {
     background-color: black;
 }
 
-.footer-faq{
-    margin-top: 850px;
-    padding: 60px;
-    background-color: black;
-}
 
 
 @media screen and (max-width: 350px) {   
@@ -336,5 +281,15 @@ input::placeholder {
         align-items: center;
         margin: auto;
     }
+
+}
+
+@media screen and (min-width: 750px) { 
+
+    .slider img{
+        width: 100%;
+        height: 500px;
+    }
+
 
 }
