--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
+body{
     font-size: 62.5%;
     font-family: 'Nunito', sans-serif;
 }
@@ -27,7 +27,7 @@ body {
 
 .navbar2{
     margin-top: 0%;
-    background-color: black;
+    background-color: black;    
 }
 /* NAVBAR HOME */
 .navbar2 .navbar2-container{
@@ -54,7 +54,7 @@ body {
     overflow: hidden;
     margin: auto;
 }
-.slider ul{
+.slider .slider-ul{
     display: flex;
     padding: 0;
     width: 400%;
@@ -63,7 +63,7 @@ body {
     animation-timing-function: ease-in;
 }
 
-.slider li{
+.slider .slider-li{
     width: 100%;
     list-style: none;   
 }
@@ -87,14 +87,166 @@ body {
     100% { margin-left: -300%; }
 }
 
-/* BOTON DESPLEGABLE */
+/*  ACORDEON HOME*/
+.accordion{
+    background-color: #171F21 ;
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin: 0;
+    padding: 30px;
+}
+.h2-dc{
+    text-align: center;
+    font-size:  26px;
+    line-height: 34px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+    background-color: #2F89E3 ;
+    color: #C7E7F1;
+    margin: 0;
+    cursor: pointer;
+}
+
+.h2-marvel{
+    text-align: center;
+    font-size:  26px;
+    line-height: 34px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+    background-color:#E33101 ;
+    color: #C7E7F1;
+    margin: 0;
+    cursor: pointer;
+}
+
+p {
+    max-width: 800px;
+    margin-top: 14px;
+    color: white;
+    font-size: 17px;
+    line-height: 26px;
+    letter-spacing: 1px;
+    position: relative;
+    overflow: hidden;
+    opacity: 1;
+    transform: translate(0,0);
+    z-index: z;
+    text-decoration: none;
+}
+
+.a-card{
+    max-width: 800px;
+    margin-top: 14px;
+    color: white;
+    font-size: 17px;
+    line-height: 26px;
+    letter-spacing: 1px;
+    position: relative;
+    overflow: hidden;
+    opacity: 1;
+    transform: translate(0,0);
+    z-index: z;
+    text-decoration: none;
+}
 
 
+.accordion-ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.accordion-ul li{
+    position: relative;
+    padding: 0;
+    margin: 0;
+    padding-bottom: 4px;
+    padding-top: 18px;
+    border-top: 1px groove #dce7eb;
+    border-bottom: 1px groove #dce7eb;
+}
+
+.accordion-ul li:nth-of-type(1){
+    animation-delay: 0.5s;
+}
+.accordion-ul li:nth-of-type(2){
+    animation-delay: 0.75s;
+}
+
+.accordion-ul li:nth-of-type{
+    padding-bottom: 0;
+}
+
+.accordion-ul li i{
+    position: absolute;
+    transform: translate(-6px,0);
+    margin-top: 16px;
+    margin-right: 4px;
+    right: 0;
+}
+
+.accordion-ul li i:before,
+.accordion-ul li i:after{
+    content: "";
+    position: absolute;
+    background:black;
+    width: 3px;
+    height: 9px;
+}
+.accordion-ul li i:before{
+    transform: translate(-2px,0) rotate(45deg);
+}
+
+.accordion-ul li i:after{
+    transform: translate(2px,0) rotate(-45deg);
+}
+
+
+p,
+.accordion-ul li i:before,
+.accordion-ul li i:after{
+    transition: all 0.45s ease-in-out;
+}
+
+.accordion-ul li input[type=checkbox]{
+    position: absolute;
+    cursor: pointer;
+    width: 100%;
+    height: 10%;
+    z-index: 1;
+    opacity: 0;
+}
+
+.accordion-ul li input[type=checkbox]:checked ~ p{
+    margin-top: 0;
+    max-height: 0;
+    opacity: 0;
+    transform: translate(0,50%);
+}
+
+.accordion-ul li input[type=checkbox]:checked ~i:before{
+    transform: translate(2px,0) rotate(45deg);
+}
+
+.accordion-ul li input[type=checkbox]:checked ~i:after{
+    transform: translate(-2px,0) rotate(-45deg);
+}
+
+
+
+
+
+/* FIN ACORDEON HOME*/
 
 
 /* LOG IN */
 .body-login{
-    background: url(../img/batman.jpeg) no-repeat center center fixed; 
+    background: url(../img/batman.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
