--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body{
     display: flex;
     padding: 0;
     width: 400%;
-
+    background-color: #171F21 ;
     animation: cambio 20s infinite alternate;
     animation-timing-function: ease-in;
 }
@@ -95,7 +95,6 @@ body{
     width: 100%;
     left: 50%;
     transform: translate(-50%, 0);
-    margin: 0;
     padding: 30px;
 }
 .h2-dc{
@@ -125,7 +124,6 @@ body{
 }
 
 p {
-    max-width: 800px;
     margin-top: 14px;
     color: white;
     font-size: 17px;
@@ -140,7 +138,6 @@ p {
 }
 
 .a-card{
-    max-width: 800px;
     margin-top: 14px;
     color: white;
     font-size: 17px;
@@ -157,7 +154,7 @@ p {
 
 .accordion-ul{
     list-style: none;
-    padding: 0;
+    padding-bottom: 100px;
     margin: 0;
 }
 
@@ -166,7 +163,6 @@ p {
     padding: 0;
     margin: 0;
     padding-bottom: 4px;
-    padding-top: 18px;
     border-top: 1px groove #dce7eb;
     border-bottom: 1px groove #dce7eb;
 }
@@ -185,8 +181,7 @@ p {
 .accordion-ul li i{
     position: absolute;
     transform: translate(-6px,0);
-    margin-top: 16px;
-    margin-right: 4px;
+    margin-right: 1px;
     right: 0;
 }
 
@@ -413,7 +408,6 @@ input::placeholder {
 }
 
 .footer-index{
-    margin-top: 350px;
     padding: 60px;
     background-color: black;
 }
@@ -440,8 +434,6 @@ input::placeholder {
 
     .slider img{
         width: 100%;
-        height: 500px;
+        height: 100%;
     }
-
-
-}
+}  
