--- a/css/app.css
+++ b/css/app.css
@@ -50,28 +50,22 @@ body{
 
 /* CARDS */
 
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #16384c;
-}
-
 .container{
     position: relative;
-    width: 1100px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 30px
+    
+    background-color: #171F21;
 }
 
 .container .card{
     position: relative;
-    max-width: 300px;
+    max-width: 200px;
     height: 215px;
-    background: #fff;
+    background: silver;
     margin: 50px 10px;
     padding: 20px 0px;
     display: flex;
@@ -89,7 +83,6 @@ main{
     max-width: 260px;
     height: 30%;
     top: -60px;
-    left: 20px;
     z-index: 1;
     box-shadow: 0 5px 202px rgb(0,0,0,0.2);
 }
@@ -103,11 +96,12 @@ main{
     position: relative;
     margin-top: -140px;
     padding: 170px 15px;
-    text-align: ;
+    text-align: justify;
     color: #111;
     visibility: hidden;
     opacity: 0;
     transition: 0.3s ease-in-out;
+    
 }
 
 .container .card:hover .content{
@@ -116,9 +110,6 @@ main{
     margin-top: -40px;
     transition-delay: 0.3s;
 }
-
-
-
 
 
 
