--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -24,25 +25,53 @@ body{
     border: 1px#5A5B54  solid;
 }
 
-.navbar2{
-    margin-top: 0%;
-    background-color: black;    
-}
-/* NAVBAR HOME */
-.navbar2 .navbar2-container{
-    list-style-type: none;
+
+header{
+    width: 100%;
+    background-color: black;
+    top: 0;
+    left: 0;
+    z-index: 100;
     display: flex;
     justify-content: space-around;
-    align-items: center;
 }
 
-.navbar2 .navbar2-container .navbar2-a{
+#btn-menu{
+    display: none;
+}
+
+header label{
+    display: none;
+    width: 60px;
+    padding: 10px;
     color: #C7E7F1;
+    font-size: 20px;
+    transition: all 500ms ease;
+    
+}
+
+header label:hover{
+    background-color: rgba(0,0,0,0.3);
+}
+
+.menu ul{
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+
+.menu li a{
     text-decoration: none;
-    padding: 0.70em;
-    margin-right: 2em;
-    font-size: 1.8em;
-    font-weight: bold;
+    color: #C7E7F1;
+    display: block;
+    padding: 15px 20px;
+    transition: all 500ms ease;
+    font-size:20px;
+}
+
+.menu li a:hover{
+    background-color: rgba(255,255,255,0.3);
 }
 
 /* FIN DE NAVBAR */
@@ -50,7 +79,6 @@ body{
 /* CARDS */
 
 .container{
-    position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -121,18 +149,55 @@ body{
     font-size: 14px;
 }
 
-@media screen and (max-width: 350px) {   
 
-    .navbar2 .navbar2-container{
-        display: flex;
-        justify-content: space-center;
+@media (max-width: 610px){
+    .container .card .imgBx{
+        position: relative;
+        max-width: 183px;
+        height: 30%;
+        top: -30px;
+        z-index: 1;
+        box-shadow: 0 5px 202px rgb(0,0,0,0.2);
     }
-   .navbar2 .navbar2-container .navbar2-a{
-        list-style-type: none;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: auto;
-    }
-
 }
+
+
+@media (max-width: 659px){
+    header{
+        width: 100%;
+        background-color: black;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        display: flex;
+        justify-content: start;
+    }
+
+    header label{
+        display: block;
+    }
+    .menu{
+        position: absolute;
+        background: black; 
+        width: 100%;
+        margin-top: -100%;
+        transition: all 500ms ease;   
+    }
+    .menu ul{
+        flex-direction: column;
+        border-top: 1px solid #fffa;
+    }
+
+    .menu li a{
+        text-decoration: none;
+        color: #C7E7F1;
+        display: block;
+        padding: 15px 20px;
+        transition: all 500ms ease;
+        font-size: 14px;
+    }
+    #btn-menu:checked ~ .menu{
+        margin: 0;
+    }
+}
+
