--- a/css/faq.css
+++ b/css/faq.css
@@ -87,7 +87,7 @@ ul li{
     margin: 0;
     padding-bottom: 4px;
     padding-top: 18px;
-    border-top: 1px dotted #dce7eb;
+    border-top: 1px #dce7eb;
 }
 
 ul li:nth-of-type(1){
@@ -206,6 +206,47 @@ ul li input[type=checkbox]:checked ~i:after{
     }
     
 }
+
+
+@media (max-width: 768px){
+    header{
+        width: 100%;
+        background-color: black;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        display: flex;
+        justify-content: start;
+    }
+
+    header label{
+        display: block;
+    }
+    .menu{
+        position: absolute;
+        background: black; 
+        width: 100%;
+        margin-top: -100%;
+        transition: all 500ms ease;   
+    }
+    .menu ul{
+        flex-direction: column;
+        border-top: 1px solid #fffa;
+    }
+
+    .menu li a{
+        text-decoration: none;
+        color: #C7E7F1;
+        display: block;
+        padding: 3px 20px;
+        transition: all 500ms ease;
+        font-size: 14px;
+    }
+    #btn-menu:checked ~ .menu{
+        margin: 0;
+    }
+}
+
 
 @media screen and (max-width: 900px){
 
