--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -28,11 +29,13 @@ body{
 
 header{
     width: 100%;
+    margin-top: 50px;
     background-color: black;
     top: 0;
     left: 0;
     z-index: 100;
     display: flex;
+    position: absolute;
     justify-content: space-around;
 }
 
@@ -82,6 +85,7 @@ header label:hover{
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-top: 100px;
     align-items: center;
     flex-wrap: wrap;
     background-color: #171F21;
@@ -121,7 +125,7 @@ header label:hover{
 .container .card .content{
     position: relative;
     margin-top: -140px;
-    padding: 170px 15px;
+    padding: 145px 15px;
     text-align: justify;
     color: #C7E7F1;
     visibility: hidden;
@@ -143,17 +147,180 @@ header label:hover{
     border-bottom: solid #C7E7F1 1px;
     width: fit-content;
     margin: auto;
+    
 }
 .innerText{
     text-align: center;
     font-size: 14px;
+   
 }
 
 
-@media (max-width: 410px){
+
+
+
+
+
+
+/* FOOTER */
+footer{
+    /*position: fixed;*/
+    bottom: 0px;
+    width: 100%;
+    background: black;
+    color: white;
+}
+
+.main-content{
+    display: flex;
+}
+
+.main-content .box{
+    flex-basis: 50%;
+    padding: 10px 20px;
+}
+
+.box h2{
+    font-size: 1.125rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.box .content{
+    margin: 20px 0 0 0;
+    position: relative;
+}
+
+.box .content:before{
+    position: absolute;
+    content: '';
+    top: -10px;
+    height: 2px;
+    width: 100%;
+    background: #1a1a1a;
+}
+
+.box .content:after{
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 15%;
+    background: #f12020;
+    top: -10px;
+}
+.left .content p{
+    text-align: justify;
+}
+
+.left .content .social{
+    margin: 20px 0 0 0;
+}
+
+.left .content .social a{
+    padding: 0 2px;
+}
+
+.left .content .social a span{
+    height: 40px;
+    width: 40px;
+    background: #1a1a1a;
+    line-height: 40px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.left .content .social a span:hover{
+    background: #f12020;
+}
+
+.center .content .fas{
+font-weight:  1.4375rem;
+background: #1a1a1a;
+height: 45px;
+width: 45px;
+line-height: 45px;
+text-align: center;
+border-radius: 50%;
+transition: 0.3s;
+cursor: pointer;
+
+}
+.center .content .fas:hover{
+    background: #f12020;  
+}
+
+.center .content .text{
+    font-size: 13px;
+    font-weight: 500;
+    padding-left: 10px;
+}
+.center .content .phone{
+    margin: 10px 0;
+}
+.right form .text{
+    font-size: 10px;
+    margin-bottom: 2px;
+    color:#656565;
+}
+.right form .msg{
+margin-top: 10px;
+}
+
+.right form input, .right form textarea{
+    width: 100%;
+    font-size: 15px;
+    background: #151515;
+    padding-left: 10px;
+    border: 1px solid #222222;
+}
+.right form input:focus,
+.right form textarea:focus{
+    outline-color: #3498db;
+}
+.right form input{
+    height: 35px;
+}
+.right form .btn{
+margin-top: 10px;
+}
+.right form .btn button{
+    height: 40px;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: #f12020;
+    font-size: 10px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: .3s;
+}
+.right form .btn button:hover{
+    background: #000;
+}
+.bottom center{
+    padding: 5px;
+    font-size: 10px;
+    background: #151515;
+}
+.bottom center span{
+    color: #656565;
+}
+.bottom center span a{
+    color: #120202;
+    text-decoration: none;
+}
+
+.bottom center a:hover{
+    text-decoration: underline;
+}
+
+
+@media screen and (max-width: 569px){
     .container .card .imgBx{
         position: relative;
-        max-width: 230px;
+        max-width: 200px;
         height: 30%;
         top: -30px;
         z-index: 1;
@@ -161,19 +328,8 @@ header label:hover{
     }
 }
 
-@media (min-width: 410px){
-    .container .card .imgBx{
-        position: relative;
-        max-width: 183px;
-        height: 30%;
-        top: -30px;
-        z-index: 1;
-        box-shadow: 0 5px 202px rgb(0,0,0,0.2);
-    }
-}
 
-
-@media (max-width: 659px){
+@media screen and (max-width: 659px){
     header{
         width: 100%;
         background-color: black;
@@ -212,3 +368,17 @@ header label:hover{
     }
 }
 
+@media screen and (max-width: 900px){
+    footer{
+        position: relative;
+        bottom: 0px;
+    }
+
+    .main-content{
+       flex-wrap: wrap; 
+       flex-direction: column;
+    }
+    .main-content .box{
+        margin: 5px 0;
+    }
+}
