--- a/css/faq.css
+++ b/css/faq.css
@@ -7,22 +7,89 @@
 body {
     font-size: 62.5%;
     font-family: 'Nunito', sans-serif;
-}
-
-
-/* FAQ ACORDEON*/
-
-.body-faq{
     width: 100%;
     height: 100%;
-    color: rgba(48,69,92,0.8);
     background: url(../img/torre.jpeg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    
 }
 
+
+/* NAVBAR */
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    background-color: black;
+}
+
+.navbar > a{
+    display: flex;
+    align-items: center;
+    
+}
+
+.separador-nav{
+    border: 1px#5A5B54  solid;
+}
+
+
+header{
+    width: 100%;
+    margin-top: 50px;
+    background-color: black;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    display: flex;
+    position: absolute;
+    justify-content: space-around;
+}
+
+#btn-menu{
+    display: none;
+    
+}
+
+header label{
+    display: none;
+    width: 60px;
+    padding: 10px;
+    color: #C7E7F1;
+    font-size: 20px;
+    transition: all 500ms ease;
+}
+
+header label:hover{
+    background-color: rgba(0,0,0,0.3);
+}
+
+.menu ul{
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+
+.menu li a{
+    text-decoration: none;
+    color: #C7E7F1;
+    display: block;
+    padding: 9px 20px;
+    transition: all 500ms ease;
+    font-size:20px;
+}
+
+.menu li a:hover{
+    background-color: rgba(255,255,255,0.3);
+    
+}
+/* FIN DE NAVBAR */
+
+
+/* FAQ ACORDEON*/
 
 .accordion{
     width: auto;
@@ -167,19 +234,6 @@ ul li input[type=checkbox]:checked ~i:after{
 
 @media screen and (max-width: 350px) {   
 
-    .navbar2 .navbar2-container{
-        display: flex;
-        justify-content: space-center;
-    }
-   .navbar2 .navbar2-container .navbar2-a{
-        list-style-type: none;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: auto;
-    }
-
-
     .accordion{
         background-color: aliceblue;
         max-width: 250px;
@@ -206,7 +260,6 @@ ul li input[type=checkbox]:checked ~i:after{
     }
     
 }
-
 
 @media (max-width: 768px){
     header{
