--- a/css/faq.css
+++ b/css/faq.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Nunito', sans-serif;
     width: 100%;
     height: 100%;
-    background: url(../img/torre.jpeg) no-repeat center center fixed; 
+    background: url(../img/MarvelDCVertical.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -17,26 +17,21 @@ body {
     
 }
 
-
 /* NAVBAR */
 .navbar{
     display: flex;
     justify-content: space-around;
     background-color: black;
+    border-bottom: 1px#f12020 solid;
 }
 
 .navbar > a{
     display: flex;
     align-items: center;
-    
 }
-
-.separador-nav{
-    border: 1px#5A5B54  solid;
-}
-
 
 header{
+    border-top: 1px#f12020 solid;
     width: 100%;
     margin-top: 50px;
     background-color: black;
@@ -50,20 +45,20 @@ header{
 
 #btn-menu{
     display: none;
-    
 }
 
 header label{
     display: none;
     width: 60px;
     padding: 10px;
-    color: #C7E7F1;
+    color: #2590B2;
     font-size: 20px;
     transition: all 500ms ease;
 }
 
 header label:hover{
     background-color: rgba(0,0,0,0.3);
+
 }
 
 .menu ul{
@@ -75,16 +70,16 @@ header label:hover{
 
 .menu li a{
     text-decoration: none;
-    color: #C7E7F1;
+    color: #2590B2;
     display: block;
     padding: 9px 20px;
     transition: all 500ms ease;
     font-size:20px;
 }
 
+
 .menu li a:hover{
     background-color: rgba(255,255,255,0.3);
-    
 }
 /* FIN DE NAVBAR */
 
@@ -93,7 +88,7 @@ header label:hover{
 
 .accordion{
     width: auto;
-    background-color: aliceblue;
+    background: rgba(0,0,0,.6);
     display: inline-block;
     position: relative;
     left: 50%;
@@ -115,23 +110,24 @@ h1 i{
     font-weight: bold; 
 }
 
-h2{
+.acc-h2{
     text-align: center;
     font-size:  26px;
     line-height: 34px;
     font-weight: 300;
     letter-spacing: 1px;
     display: block;
-    background: #fefffa;
-    color: #16728F;
+    background: rgba(0,0,0,.7);
+    color: #0D7B93;
     margin: 0;
     cursor: pointer;
 }
 
-p{
+.respuestas{
     max-width: 800px;
     margin-top: 14px;
-    color: rgba(48,69,92,0.8);
+    color: #f12020;
+    background-color: rgba(211,211,211);
     font-size: 17px;
     line-height: 26px;
     letter-spacing: 1px;
@@ -197,6 +193,7 @@ p,
 ul li i:before,
 ul li i:after{
     transition: all 0.25s ease-in-out;
+    font-size: 17px;
 }
 
 ul li input[type=checkbox]{
@@ -225,10 +222,120 @@ ul li input[type=checkbox]:checked ~i:after{
 
 /* FIN ACORDEON */
 
-.footer-faq{
-    margin-top: 20px;
-    padding: 60px;
-    background-color: black;
+/* FOOTER */
+footer{
+    bottom: 0px;
+    width: 100%;
+    background: black;
+    color: #2590B2;;
+}
+
+.main-content{
+    display: flex;
+}
+
+.main-content .box{
+    flex-basis: 50%;
+    padding: 10px 20px;
+}
+
+.box .ft-h2{
+    font-size: 1.125rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.box .content{
+    margin: 20px 0 0 0;
+    position: relative;
+}
+
+.box .content:before{
+    position: absolute;
+    content: '';
+    top: -10px;
+    height: 2px;
+    width: 100%;
+    background: #1a1a1a;
+}
+
+.box .content:after{
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 15%;
+    background: #f12020;
+    top: -10px;
+}
+.left .content p{
+    text-align: justify;
+    color: #2590B2;
+}
+
+.left .content .social{
+    margin: 20px 0 0 0;
+}
+
+.left .content .social a{
+    padding: 0 2px;
+}
+
+.left .content .social a span{
+    height: 40px;
+    width: 40px;
+    background: #1a1a1a;
+    line-height: 40px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.left .content .social a span:hover{
+    background: #f12020;
+}
+
+.lg-ft{
+    display: flex;
+    margin-top: 30px;
+    display: inline-block;
+    margin-left: 32px;
+    border-radius: 50px;
+}
+
+.center .content .fas{
+font-weight:  1.4375rem;
+background: #1a1a1a;
+height: 45px;
+width: 45px;
+line-height: 45px;
+text-align: center;
+border-radius: 50%;
+transition: 0.3s;
+cursor: pointer;
+
+}
+.center .content .fas:hover{
+    background: #f12020;  
+}
+
+.center .content .text{
+    font-size: 17px;
+    font-weight: 500;
+    padding-left: 10px;
+}
+.center .content .phone{
+    margin: 10px 0;
+}
+
+.bottom center{
+    padding: 5px;
+    font-size: 10px;
+    background: #151515;
+}
+
+.bottom center span{
+    color: #656565;
 }
 
 
@@ -313,5 +420,19 @@ ul li input[type=checkbox]:checked ~i:after{
         margin: 98px 0;
         padding: 30px;
     }
-    
+
+    footer{
+        position: relative;
+        bottom: 0px;
+    }
+
+    .main-content{
+       flex-wrap: wrap; 
+       flex-direction: column;
+    }
+    .main-content .box{
+        margin: 5px 0;
+    }
 }
+
+
