--- a/css/app.css
+++ b/css/app.css
@@ -92,7 +92,7 @@ header label:hover{
     position: relative;
     max-width: 1750px;
     height: 215px;
-    background: black ;
+    background: black;
     margin: 50px 10px;
     padding: 20px 0px;
     display: flex;
@@ -270,16 +270,6 @@ cursor: pointer;
     color: #656565;
 }
 
-@media screen and (max-width: 569px){
-    .container .card .imgBx{
-        position: relative;
-        max-width: 200px;
-        height: 30%;
-        top: -30px;
-        z-index: 1;
-        box-shadow: 0 5px 202px rgb(0,0,0,0.2);
-    }
-}
 
 
 @media screen and (max-width: 659px){
@@ -333,5 +323,52 @@ cursor: pointer;
     }
     .main-content .box{
         margin: 5px 0;
+    }
+
+    .container .card{
+        position: relative;
+        max-width: 1750px;
+        height: 215px;
+        background: black ;
+        margin: 20px 0px;
+        padding: 20px 0px;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 5px 202px rgb(0,0,0,0.5);
+        transition: 0.3s ease-in-out;
+    }
+}
+
+@media screen and (max-width: 519px){
+
+    .container .card{
+        position: relative;
+        max-width: 1750px;
+        width: 200px;
+        height: 215px;
+        background: black ;
+        margin: 20px 0px;
+        padding: 10px 0px;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 5px 202px rgb(0,0,0,0.5);
+        transition: 0.3s ease-in-out;
+    }
+}
+
+@media screen and (max-width: 399px){
+
+    .container .card{
+        position: relative;
+        max-width: 1750px;
+        width: 150px;
+        height: 215px;
+        background: black;
+        margin: 20px 0px;
+        padding: 10px 0px;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 5px 202px rgb(0,0,0,0.5);
+        transition: 0.3s ease-in-out;
     }
 }
