--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ input::placeholder {
     justify-content: center;
 }
 .innerH1{
-    color: cornsilk;
+    color: black;
     text-align: center;
 }
 
