--- a/css/app.css
+++ b/css/app.css
@@ -51,7 +51,7 @@ header label{
 }
 
 header label:hover{
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(255,255,255,0.3);
 }
 
 .menu ul{
@@ -300,14 +300,14 @@ cursor: pointer;
 
     .menu li a{
         text-decoration: none;
-        color: #C7E7F1;
+        color: #2590B2;
         display: block;
         padding: 15px 20px;
         transition: all 500ms ease;
         font-size: 14px;
     }
     #btn-menu:checked ~ .menu{
-        margin: 0;
+        margin: 45px 0px;
     }
 }
 
