--- a/css/faq.css
+++ b/css/faq.css
@@ -127,7 +127,7 @@ h1 i{
     max-width: 800px;
     margin-top: 14px;
     padding: 15px 0;
-    color: #f12020;
+    color: #2590B2;
     background-color: #171F21;;
     font-size: 17px;
     text-align: center;
