--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ input{
 .message-container p{
     display: flex;
     align-self: center;
-    background-color: red;
+    background-color: #93250D;
     width: 62%;
     padding: 10px;
     margin: 10px 0;
@@ -292,6 +292,7 @@ input{
     border-radius: 5px;
     box-shadow: 0 0 10px #feb1b1;
     font-size: 15px;
+    
 }
 
 .message-container p.correct-message {
