--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body{
     font-size: 62.5%;
     font-family: 'Nunito', sans-serif;
+    background-color: #171F21;
 }
 
 /* NAVBAR */
@@ -74,28 +75,37 @@ header label:hover{
 /* FIN DE NAVBAR */
 
 /* SLIDER HOME*/
+.container-slider{
+    width: 100%;
+}
 .slider{
     width: 100%;
     overflow: hidden;
     margin: auto;
+    
 }
 .slider .slider-ul{
     display: flex;
     padding: 0;
     width: 700%;
     background-color: #171F21 ;
-    animation: cambio 15s infinite alternate;
+    animation: cambio 25s infinite normal;
     animation-timing-function: ease-in;
+    margin-bottom: -30%; 
+   
 }
 
 .slider .slider-li{
     width: 100%;
-    list-style: none;   
+    list-style: none;  
+    
 }
 
 .slider img{
     width: 100%;
-    height: 100%;
+    height: 60%;
+    opacity: 0.5;
+    
 }
 
 @keyframes cambio{
@@ -124,13 +134,14 @@ header label:hover{
 .containerSearch{
     display: flex;
     justify-content: space-around;
-    padding: 30px;
+    padding: 70px 30px;
     background-color: #171F21;
 }
 h1{
     text-align: center;
     color: #2590B2;
     padding-bottom: 10px;
+    margin-top: 10px;
 }
 .container-form form{
 width: 100%;
@@ -472,12 +483,12 @@ cursor: pointer;
     }
    
 }  
-@media screen and (min-width: 750px) { 
+/* @media screen and (min-width: 750px) { 
     .slider img{
         width: 100%;
         height: 100%;
     }
-}  
+}   */
 
 
 @media (max-width: 768px){
