--- a/css/style.css
+++ b/css/style.css
@@ -77,38 +77,48 @@ header label:hover{
 /* SLIDER HOME*/
 .container-slider{
     width: 100%;
-}
+    display: flex;
+} 
 .slider{
     width: 100%;
     overflow: hidden;
-    margin: auto;
-    
 }
-.slider .slider-ul{
+.slider .slider-ul-dc{
     display: flex;
     padding: 0;
     width: 700%;
     background-color: #171F21 ;
-    animation: cambio 25s infinite normal;
-    animation-timing-function: ease-in;
-    margin-bottom: -30%; 
-   
+    animation: cambiodc 15s infinite alternate;
+    animation-timing-function: linear;
 }
+.slider .slider-ul-mv{
+    display: flex;
+    padding: 0;
+    width: 700%;
+    background-color: #171F21 ;
+    animation: cambiomv 15s infinite alternate;
+    animation-timing-function: linear;
+}
+
 
 .slider .slider-li{
     width: 100%;
-    list-style: none;  
-    
+    list-style: none;    
 }
 
-.slider img{
+.slider .img-dc{
     width: 100%;
-    height: 60%;
-    opacity: 0.5;
-    
+    height: 62.5%;
+    border:1px solid #CCCCCC;
 }
 
-@keyframes cambio{
+.slider .img-mv{
+    width: 100%;
+    height: 66.7%;
+    border: 1px solid #CCCCCC;
+}
+
+@keyframes cambiomv{
     0% { margin-left: 0; }
     10% { margin-left: 0; }
 
@@ -130,6 +140,32 @@ header label:hover{
     90% { margin-left: -600%; }
     100% { margin-left: -600%; }
 }
+
+@keyframes cambiodc{
+    100% { margin-left: 0; }
+    90% { margin-left: 0; }
+
+    85% { margin-left: -100%; }
+    75% { margin-left: -100%; }
+
+    70% { margin-left: -200%; }
+    60% { margin-left: -200%; }
+
+    55% { margin-left: -300%; }
+    45% { margin-left: -300%; }
+
+    40% { margin-left: -400%; }
+    30% { margin-left: -400%; }
+
+    25% { margin-left: -500%; }
+    15% { margin-left: -500%; }
+
+    10% { margin-left: -600%; }
+    0% { margin-left: -600%; }
+}
+
+
+
 
 .containerSearch{
     display: flex;
@@ -483,12 +519,16 @@ cursor: pointer;
     }
    
 }  
-/* @media screen and (min-width: 750px) { 
-    .slider img{
+@media screen and (min-width: 750px) { 
+    .slider .img-dc{
         width: 100%;
-        height: 100%;
+        height: 40%;
     }
-}   */
+    .slider .img-mv{
+        width: 100%;
+        height: 42.6%;
+    }
+}  
 
 
 @media (max-width: 768px){
