--- a/css/style.css
+++ b/css/style.css
@@ -165,23 +165,26 @@ header label:hover{
 }
 
 
-
+/* 
 
 .containerSearch{
     display: flex;
-    justify-content: space-around;
-    padding: 70px 30px;
     background-color: #171F21;
+    margin-top: -38%;
 }
-h1{
-    text-align: center;
-    color: #2590B2;
+
+.dc-lg-card{
+    width: 15%;
     padding-bottom: 10px;
     margin-top: 10px;
+    align-self: center;
 }
+
 .container-form form{
 width: 100%;
 max-width: 650px;
+display: flex;
+flex-direction: column;
 }
 
 input{
@@ -196,6 +199,16 @@ input{
     font-size: 20px;
     color:#2590B2;
 }
+.innerH1{
+    color: #2590B2;
+    text-align: center;
+    padding-bottom: 15px;
+}
+.innerImg{
+    width: 100%;
+    border:1px solid #CCCCCC;
+    margin-bottom: 30px;
+} */
 
 /* LOG IN */
 .body-login{
@@ -366,16 +379,7 @@ background-color: #171F21;
     display: flex;
     justify-content: center;
 }
-.innerH1{
-    color: #2590B2;
-    text-align: center;
-    padding-bottom: 15px;
-}
-.innerImg{
-    width: 100%;
-    border:1px solid #CCCCCC;
-    margin-bottom: 30px;
-}
+
 
 /* FOOTER */
 footer{
@@ -509,7 +513,7 @@ cursor: pointer;
         margin: auto;
     }
 }
-
+/* 
 @media screen and (max-width: 528px) {
     .containerSearch{
         display: flex;
@@ -518,7 +522,7 @@ cursor: pointer;
         background-color: #171F21;
     }
    
-}  
+}   */
 @media screen and (min-width: 750px) { 
     .slider .img-dc{
         width: 100%;
